fixed spacing of cv component

--- a/src/scss/components/cv.scss
+++ b/src/scss/components/cv.scss
@@ -33,10 +33,9 @@
   @include mobile {
     height: 80px;
   }
-  h3 {
-    padding: 0;
+  p{
     text-align: center;
-    width: 50%;
+    width: 100px;
     height: fit-content;  
   }
   .cv-btn {
@@ -46,7 +45,6 @@
     display: flex;
     align-items: center;
     justify-content: center;
-
     @include mobile {
       width: 50px;
       height: 50px;
